# bieZhai

./: README.md  index.html  package-lock.json
remote-desktop-client/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1710329007273.mjs
remote-desktop-client/src/: App.vue  main.ts  router.ts
remote-desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
remote-desktop-client/src-tauri/src/: a.rs  commands.rs  main.rs
remote-desktop-client/src/common/: Constans.ts  InputEvent.ts
remote-desktop-client/src/components/: RemotePanel.vue  RemotePanelDemo.vue  a.html  a.vue  b.html  initiaScreenOne.vue  modify.vue  null.vue  screenOne.vue
remote-desktop-client/src/components/js/: screen.js
remote_desktop_server/: Cargo.toml
remote_desktop_server/src/: main.rs  server.rs  session.rs
webrtctest/: app.js  index.html
